# tauri-invoke-http

./: CHANGELOG.md  Cargo.toml  README.md
.changes/: config.json  fix-parse-command-name.md  initial-release.md  pre.json
.github/workflows/: audit.yml  covector-status.yml  covector-version-or-publish.yml  format.yml  lint.yml  test.yml
examples/vanilla/: package.json  pnpm-lock.yaml
examples/vanilla/public/: index.html
examples/vanilla/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
src/: invoke_system.js  lib.rs  tokio_rt.rs
