[package]
name = "tauri-invoke-http"
version = "2.0.0-rc.1"
edition = "2021"
rust-version = "1.75"
authors = [ "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
license = "Apache-2.0 OR MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri-invoke-http"
description = "Make tiny, secure apps for all desktop platforms with Tauri"
exclude = [
  "/examples",
  ".license_template",
  "CHANGELOG.md",
  "/target"
]

[dependencies]
anyhow = "1"
tauri = { version = "2.0.0-rc.15", features = ["test"] }
hyper = { version = "1", features = ["server"] }
pin-project-lite = "0.2"
http-body-util = "0.1"
portpicker = "0.1"
serde_json = "1.0"
tokio = { version = "1", features = ["net"] }
log = "0.4"
percent-encoding = "2.3"
