[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Tauri Programme within The Commons Conservancy" ]
repository = ""
edition = "2021"
rust-version = "1.60"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "2.0.0-rc.15", features = [] }
tauri-invoke-http = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
